# NeoStats-profileserv

./: .gitattributes  ChangeLog  Makefile.am  Makefile.in  README.ProfileServ  RELNOTES  RELNOTES.win32.txt  aclocal.m4  configure  configure.in  modconfigwin32.h  profileserv.c  profileserv.h  profileserv.sln  profileserv.vcproj  profileserv_help.c  pulse.xml
win32/: ProfileServ.qsp  buildwin32snap.bat  modconfigwin32.h  neostatsversion.rc
